
option(ENABLE_AMQP "Enable AMQP module" OFF)
if(ENABLE_AMQP)
    add_subdirectory(afamqp)
endif(ENABLE_AMQP)

option(ENABLE_AFUSER "Enable afuser module" OFF)
if(ENABLE_AFUSER)
    add_subdirectory(afuser)
endif(ENABLE_AFUSER)

option(ENABLE_REDIS "Enable redis module" OFF)
if(ENABLE_REDIS)
    add_subdirectory(redis)
endif(ENABLE_REDIS)

add_subdirectory(affile)
add_subdirectory(afprog)
add_subdirectory(afsmtp)
add_subdirectory(afsocket)
add_subdirectory(native)
add_subdirectory(csvparser)
add_subdirectory(date)
add_subdirectory(dbparser)
add_subdirectory(kvformat)
add_subdirectory(linux-kmsg-format)
add_subdirectory(pacctformat)
add_subdirectory(pseudofile)
add_subdirectory(syslogformat)
add_subdirectory(geoip)
add_subdirectory(systemd-journal)
add_subdirectory(cef)
add_subdirectory(json)
add_subdirectory(afsql)
